# starter-hugo-academic

./: .gitignore
abyssalAnchor/: Global Context.txt  Linked In.txt  Portfolio Links.txt  resume.tex
abyssalAnchor/qLDPC Reference/: README.md  pyproject.toml
abyssalAnchor/qLDPC Reference/.github/workflows/: build-changes.yaml  continuous-integration.yaml
abyssalAnchor/qLDPC Reference/checks/: all_.py  coverage_.py  mypy_.py
abyssalAnchor/qLDPC Reference/examples/: basics.ipynb  bivariate_bicycle_codes.ipynb  logical_error_rates.ipynb  noise_models.ipynb  transversal_gates.ipynb
abyssalAnchor/qLDPC Reference/examples/scripts/: find_bbcode_layouts.py
abyssalAnchor/qLDPC Reference/experiments/quantum_tanner/: collect_results.py  run_randomized_search.py
abyssalAnchor/qLDPC Reference/src/qldpc/: abstract.py  abstract_test.py  cache.py  cache_test.py  math.py  math_test.py  objects.py  objects_test.py
abyssalAnchor/qLDPC Reference/src/qldpc/circuits/: __init__.py  bookkeeping.py  bookkeeping_test.py  common.py  common_test.py  memory.py  memory_test.py  noise_model.py  noise_model_test.py  syndrome_measurement.py  syndrome_measurement_test.py  transversal.py  transversal_test.py
abyssalAnchor/qLDPC Reference/src/qldpc/codes/: __init__.py  classical.py  classical_test.py  common.py  common_test.py  distance.py  distance_test.py  quantum.py  quantum_test.py
abyssalAnchor/qLDPC Reference/src/qldpc/decoders/: __init__.py  custom.py  custom_test.py  dems.py  dems_test.py  retrieval.py  retrieval_test.py  sinter.py  sinter_test.py
config/_default/: config.yaml  menus.yaml  params.yaml
content/: _index.md  privacy.md  terms.md
content/authors/admin/: _index.md
content/project/basiq/: index.md
content/project/bloc-fantome/: index.md
content/project/casimir/: index.md
content/project/cherenkov/: index.md
content/project/chime/: index.md
content/project/cosmo/: Topological Defects; Presentation.pptx  index.md
content/project/desitter/: index.md
content/project/gg/: index.md
content/project/ggs/: index.md  index_disabled.md
content/project/leonne/: index.md
content/project/medphys/: index.md
content/project/minecraft-generation/: index.md
content/project/qbyte/: index.md
content/project/qldpc/: index.md
content/project/qring/: index.md
data/fonts/: jeff.toml
data/themes/: jeffrey-purple.toml
layouts/: 404.html
(+13 files in other folders)
