[project]
name = "qLDPC"
version = "0.2.7"
description = "Tools for constructing and analyzing quantum low density parity check (qLDPC) codes."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Michael A. Perlin", email = "mika.perlin@gmail.com" }]
keywords = [
  "quantum computing",
  "quantum error correction",
  "low density parity check codes",
  "LDPC",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"

dependencies = [
  "cvxpy>=1.3.2",
  "diskcache>=5.0.0",
  "galois>=0.4.2",
  "ldpc>=2.4.1",
  "networkx>=2.6.2",
  "numpy>=1.24.0",
  "platformdirs>=4.0.0",
  "pymatching>=2.1.0",
  "pyperclip>=1.11.0",
  "scipy>=1.14.1",
  "stim>=1.16.dev1768963940",
  "sympy>=1.12",
]

# TODO: update relay-bp to
# "relay-bp[stim]==0.2.?",
# once https://github.com/trmue/relay/pull/30 is in a release
[project.optional-dependencies]
dev = [
  "checks-superstaq>=0.5.45",
  "jupyter>=1.1.1",
  "python-lsp-server[all]>=1.14.0",
  # "relay-bp[stim]==0.1.0",
  "relay-bp[stim] @ git+https://github.com/perlinm/relay-bp.git",
]
relay-bp = [
  # "relay-bp[stim]==0.1.0",
  "relay-bp[stim] @ git+https://github.com/perlinm/relay-bp.git",
]

[project.urls]
Repository = "https://github.com/qLDPCOrg/qLDPC"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

# Check script configuration:

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
show_error_codes = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
install_types = true
non_interactive = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--disable-socket" # forbid tests from making network calls
filterwarnings = [
  'ignore:(?s).*The problem is either infeasible or unbounded.*:UserWarning', # from cvxpy
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
include = ["./*"]
